--- a/index.html
+++ b/index.html
@@ -722,10 +722,9 @@
     <section id="mk-footer-unfold-spacer"></section>
     <section id="mk-footer-unfold-spacer"></section>
     <section id="mk-footer" class="" role="contentinfo" itemscope="itemscope" itemtype="https://schema.org/WPFooter">
-
         <div id="sub-footer">
             <div class="mk-grid">
-                <div class="mk-footer-logo"><a href="./index.html" title="Tango"><img alt="Tango" src="./images/2017-05-logo.png" width="175" height="64" loading="lazy"></a></div><span class="mk-footer-copyright">Copyright All Rights Reserved &copy; 2017</span></div>
+                <div class="mk-footer-logo"><a href="./" title="Tango"><img alt="Tango" src="./images/2017-05-logo.png" width="175" height="64" loading="lazy"></a></div><span class="mk-footer-copyright">Copyright All Rights Reserved &copy; 2017</span></div>
             <div class="clearboth"></div>
         </div>
     </section>
@@ -734,7 +733,6 @@
     <div class="bottom-corner-btns js-bottom-corner-btns"><a href="#top-of-page" class="mk-go-top  js-smooth-scroll js-bottom-corner-btn js-bottom-corner-btn--back"><svg class="mk-svg-icon" data-name="mk-icon-chevron-up" data-cacheid="icon-67b4e41f08f8a" style="height:16px;width:16px;" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1792 1792"><path d="M1683 1331l-166 165q-19 19-45 19t-45-19l-531-531-531 531q-19 19-45 19t-45-19l-166-165q-19-19-19-45.5t19-45.5l742-741q19-19 45-19t45 19l742 741q19 19 19 45.5t-19 45.5z"/></svg></a></div>
     <footer
         id="mk_page_footer">
-
         <script defer='defer' type="text/javascript" src="./js/simply-static-pro-assets-ssp-form-webhook-public.js" id="ssp-form-webhook-public-js"></script>
         <script>
             document.addEventListener("DOMContentLoaded", function () {
